enable dynamicAllocation for Spark 1.6.0

--- a/Spark/Mac/spark-defaults.conf
+++ b/Spark/Mac/spark-defaults.conf
@@ -4,3 +4,4 @@ spark.driver.memory 6g
 spark.driver.maxResultSize 3g
 spark.executor.extraClassPath /Applications/JDBC-Drivers/PostgreSQL-JDBC42-9.4.1207.jar:/Applications/JDBC-Drivers/MySQL-JDBC-5.1.38.jar
 spark.executor.memory 2g
+spark.dynamicAllocation.enabled true
