--- a/Spark/Windows/spark-defaults.conf
+++ b/Spark/Windows/spark-defaults.conf
@@ -4,3 +4,4 @@ spark.driver.memory 6g
 spark.driver.maxResultSize 3g
 spark.executor.extraClassPath C:/Repos/MBALearnsToCode/Software/JDBC-Drivers/PostgreSQL-JDBC42-9.4.1207.jar;C:/Repos/MBALearnsToCode/Software/JDBC-Drivers/MySQL-JDBC-5.1.38.jar
 spark.executor.memory 2g
+spark.dynamicAllocation.enabled true
