--- a/Python/Theano/Windows/.theanorc
+++ b/Python/Theano/Windows/.theanorc
@@ -20,6 +20,7 @@ cxx = C:/Applications/TDM-GCC-64/bin/g++.exe
 # compilation settings
 mode = FAST_RUN
 optimizer = fast_run
+optimizer_excluding = inplace
 optimizer_verbose = False
 on_opt_error = warn
 check_input = True
