remove LibSodium & LinuxBrew configs

--- a/AWS/EMR/.config/.EnvVars
+++ b/AWS/EMR/.config/.EnvVars
@@ -10,13 +10,8 @@ export NVVMIR_LIBRARY_DIR=$CUDA_ROOT/nvvm/libdevice
 export OPENBLAS_DIR=$APPS_DIR/OpenBLAS
 export GEOS_DIR=/usr
 export PROJ_DIR=/usr
-export SODIUM_DIR=/usr
-export sodium_CFLAGS=-I/usr/include
-export sodium_LIBS=-L/usr/lib
 export ZMQ_DIR=/usr
-export LINUXBREW_HOME=$APPS_DIR/LinuxBrew
-export HOMEBREW_TEMP=$TMP_DIR
-export PATH=$CUDA_ROOT/bin:$CUDA_ROOT/nvvm/bin:$LINUXBREW_HOME/bin:$LINUXBREW_HOME/sbin:$PATH
+export PATH=$CUDA_ROOT/bin:$CUDA_ROOT/nvvm/bin:$PATH
 export LD_RUN_PATH=/usr/lib64:/usr/lib
 export LD_LIBRARY_PATH=$CUDA_ROOT/lib64:$CUDA_ROOT/lib
 export PKG_CONFIG_PATH=/usr/lib64/pkgconfig:/usr/lib/pkgconfig
