--- a/AWS/EMR/.config/spark-defaults.conf
+++ b/AWS/EMR/.config/spark-defaults.conf
@@ -1,18 +1,24 @@
 # These configurations assume sufficiently high-spec Driver & Executor server nodes,
 # of AWS EC2 instance type M3.xLarge or better, especially in terms of Memory
 spark.master yarn
-spark.driver.extraClassPath /mnt/apps/Jaybird-2.2.9/jaybird-*.jar:/mnt/apps/MySQL-JDBC-5.1.38.jar:/mnt/apps/Oracle-JDBC-6.jar:/mnt/apps/PostgreSQL-JDBC42-9.4.1207.jar:/mnt/apps/SQLite-JDBC-1.4.jar:/etc/hadoop/conf:/usr/lib/hadoop/*:/usr/lib/hadoop-hdfs/*:/usr/lib/hadoop-yarn/*:/usr/lib/hadoop-lzo/lib/*:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/emrfs/conf:/usr/share/aws/emr/emrfs/lib/*:/usr/share/aws/emr/emrfs/auxlib/*
-spark.driver.extraLibraryPath /usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native
-spark.driver.memory 9g
+spark.driver.cores 1
+spark.driver.memory 6g
 spark.driver.maxResultSize 3g
-spark.executor.extraClassPath /mnt/apps/Jaybird-2.2.9/jaybird-*.jar:/mnt/apps/MySQL-JDBC-5.1.38.jar:/mnt/apps/Oracle-JDBC-6.jar:/mnt/apps/PostgreSQL-JDBC42-9.4.1207.jar:/mnt/apps/SQLite-JDBC-1.4.jar:/etc/hadoop/conf:/usr/lib/hadoop/*:/usr/lib/hadoop-hdfs/*:/usr/lib/hadoop-yarn/*:/usr/lib/hadoop-lzo/lib/*:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/emrfs/conf:/usr/share/aws/emr/emrfs/lib/*:/usr/share/aws/emr/emrfs/auxlib/*
+spark.driver.extraClassPath /mnt/apps/Jaybird-2.2.9/jaybird-*.jar:/mnt/apps/MySQL-JDBC-5.1.38.jar:/mnt/apps/Oracle-JDBC-6.jar:/mnt/apps/PostgreSQL-JDBC42-9.4.1207.jar:/mnt/apps/SQLite-JDBC-1.4.jar:/usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/emrfs/conf:/usr/share/aws/emr/emrfs/lib/*:/usr/share/aws/emr/emrfs/auxlib/*:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*
+spark.driver.extraLibraryPath /usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native
+spark.driver.extraJavaOptions -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:MaxHeapFreeRatio=70 -XX:+CMSClassUnloadingEnabled -XX:OnOutOfMemoryError='kill -9 %p'
+spark.executor.cores 4
+spark.executor.memory 6g
+spark.executor.extraClassPath /mnt/apps/Jaybird-2.2.9/jaybird-*.jar:/mnt/apps/MySQL-JDBC-5.1.38.jar:/mnt/apps/Oracle-JDBC-6.jar:/mnt/apps/PostgreSQL-JDBC42-9.4.1207.jar:/mnt/apps/SQLite-JDBC-1.4.jar:/usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/emrfs/conf:/usr/share/aws/emr/emrfs/lib/*:/usr/share/aws/emr/emrfs/auxlib/*:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*
 spark.executor.extraLibraryPath /usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native
-spark.executor.memory 9g
+spark.executor.extraJavaOptions -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:MaxHeapFreeRatio=70 -XX:+CMSClassUnloadingEnabled -XX:OnOutOfMemoryError='kill -9 %p'
+spark.local.dir /tmp
+spark.shuffle.service.enabled true
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs:///var/log/spark/apps
+spark.dynamicAllocation.enabled true
+spark.dynamicAllocation.executorIdleTimeout 600s
+spark.dynamicAllocation.cachedExecutorIdleTimeout 1800s
 spark.history.fs.logDirectory hdfs:///var/log/spark/apps
 spark.history.ui.port 18080
-spark.shuffle.service.enabled true
-spark.driver.extraJavaOptions -Dlog4j.configuration=file:///etc/spark/conf/log4j.properties -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:MaxHeapFreeRatio=70 -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=512M -XX:OnOutOfMemoryError='kill -9 %p'
-spark.executor.extraJavaOptions -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=70 -XX:MaxHeapFreeRatio=70 -XX:+CMSClassUnloadingEnabled -XX:OnOutOfMemoryError='kill -9 %p'
-spark.dynamicAllocation.enabled true
+spark.yarn.dist.files /etc/spark/conf/log4j.properties
