--- a/AWS/EMR/.config/spark-defaults.conf
+++ b/AWS/EMR/.config/spark-defaults.conf
@@ -22,3 +22,6 @@ spark.dynamicAllocation.cachedExecutorIdleTimeout 1800s
 spark.history.fs.logDirectory hdfs:///var/log/spark/apps
 spark.history.ui.port 18080
 spark.yarn.dist.files /etc/spark/conf/log4j.properties
+spark.yarn.am.memory 512m
+spark.yarn.am.cores	1
+spark.executor.instances 2
